# The5Cats-a-bevy-adventura

./: Cargo.toml  README.md
assets/: game_characters.json  game_config.json  game_sounds.json
assets/characters/catcifer/: catcifer_full.aseprite
assets/characters/enemy/: enemy_full.aseprite
assets/characters/fufi/: fufi_full.aseprite
assets/characters/kidd_cat/: kidd_full.aseprite
assets/characters/tofe/: Hero_full.aseprite
assets/characters/willie/: willie_full.aseprite
assets/levels/: level1.json  level2.json
assets/levels/level1/: level1.json  level1_active_object.json  level1_config.json  level1_events.json  level1_gaps.json  level1_hero.json
assets/levels/level2/: level2.json  level2_active_object.json  level2_config.json  level2_events.json  level2_gaps.json  level2_light.json
assets/levels/level3/: level3.json  level3_active_object.json  level3_config.json  level3_events.json  level3_gaps.json
assets/player/: Hero_idle.aseprite  Hero_idle_L_32x32.aseprite  Hero_idle_R_32x32.aseprite  Hero_walk.aseprite  Hero_walk_L_32x32.aseprite  Hero_walk_R_32x32.aseprite
assets/projectiles/: wool.aseprite
src/: game_state.rs  main.rs  physics.rs
src/collectibles/: assets.rs
src/cursor/: assets.rs  components.rs  mod.rs  systems.rs
src/enemies/: assets.rs  bundle.rs  components.rs  mod.rs  systems.rs
src/map/: assets.rs  components.rs  mod.rs  tile_systems.rs
src/menu/: assets.rs  components.rs  mod.rs
src/parallax/: components.rs  mod.rs  systems.rs
src/player/: assets.rs  bundle.rs  components.rs  mod.rs  systems.rs
(+90 files in other folders)
