[package]
name = "the5cats"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1" }
bevy_rapier2d = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27.1"
strum_macros = "0.27.1"
rand = "0.8"

[workspace]
resolver = "2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
